--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 This builds the Wayland-Weston AGL image with the basic AGL interface. 
 Demos can then be run on top of this.
 
-This image has only been run on i.MX 6QP Sabre and Sabre Auto.
-It is not supported nor tested.  It is simply a demo showing that the basic image runs.
-It runs on the 4.9.88-2.0.0 NXP release of Linux.
+This image is not supported nor tested.
+It's simply a demo showing that the basic image runs.
+It runs on i.MX Linux release 4.19.35-1.0.0.
 
 Build instructions:
 To get the BSP you need to have `repo` installed.
@@ -21,11 +21,11 @@ Download the BSP Yocto Project Environment into your directory:
 
 $: mkdir imx-yocto-bsp
 $: cd imx-yocto-bsp
-$: repo init -u https://source.codeaurora.org/external/imx/imx-manifest -b imx-linux-rocko -m imx-4.9.88-2.0.0_agl-demo.xml
+$: repo init -u https://source.codeaurora.org/external/imx/imx-manifest -b imx-linux-thud -m imx-4.19.35-1.0.0_demo_agl.xml
 
 $: repo sync
 
-Setup and Build for Wayland (currently, only one supported)
+Setup and Build for Wayland
 -------------------------------------------
 $: DISTRO=imx-agl-wayland MACHINE=imx6qpsabreauto source nxp-setup-agl.sh -b bld-agl
 
