--- a/README
+++ b/README
@@ -21,7 +21,7 @@ Download the BSP Yocto Project Environment into your directory:
 
 $: mkdir imx-yocto-bsp
 $: cd imx-yocto-bsp
-$: repo init -u ssh://bitbucket.sw.nxp.com/imx/imx-manifest -b linux-kirkstone-internal -m imx-5.15.32-2.0.0_agl.xml
+$: repo init -u ssh://bitbucket.sw.nxp.com/imx/imx-manifest -b imx-linux-kirkstone -m imx-5.15.32-2.0.0_agl.xml
 
 $: repo sync
 
